added scroll to signup button

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,14 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-css/1.0.8/angular-css.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-animate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-touch.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.7/angular-sanitize.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angularFire/2.3.0/angularfire.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.js"></script>
+
         <script src="app.js"></script>
 
     </head>
@@ -33,6 +38,10 @@
           <div class="col-sm-6 col-sm-offset-3 text-center">
             <img class="img-responsive hero-title" src="./assets/TheissBlack.jpg" alt="">
           </div>
+        </div>
+
+        <div style="position: absolute; bottom: 20px; left: 20px;">
+          <a class="scrollBtn" href="#contact" du-smooth-scroll du-scrollspy>Signup for updates!</a>
         </div>
       </section>
 
